# PolyForge

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: PolyForge_Architecture_v1.docx  PolyForge_Architecture_v1.md  PolyForge_Requirements_v1.docx  PolyForge_Requirements_v1.md
polyforge/: Orchestrator.py  __init__.py  cli.py  config.py  models.py
polyforge/docker/: executor.py  parsers.py
polyforge/llm_components/: synthesis.py
polyforge/providers/: ClaudeProvider.py  GeminiProvider.py  LLMProvider.py  OpenAIProvider.py  __init__.py  claudeProvider.py
polyforge/repo/: FileDetector.py  ProjectTypeDetector.py  RepoManager.py
tests/ProviderTests/: test_claude_provider.py  test_gemini_provider.py  test_openai_provider.py
tests/ProviderTests/files/: README.md  cart.js  cart.test.js  package-lock.json  package.json
tests/ProviderTests/files/coverage/: clover.xml  coverage-final.json  lcov.info
tests/ProviderTests/files/coverage/lcov-report/: cart.js.html  index.html
