[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polyforge"
version = "0.1.0"
description = "Multi-LLM code review and execution platform"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.34.0",
    "openai>=1.40.0",
    "google-genai>=0.7.0",
    "docker>=7.1.0",
    "typer>=0.12.0",
    "tiktoken>=0.7.0",
    "rich>=13.7.0",
    "tomli-w>=1.0.0",
]

[project.scripts]
polyforge = "polyforge.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["polyforge*"]
